# herald

./: .gitignore  Doxyfile  README.md  conanfile.py
docs/html/: dir_02b142c3e57028523e2356800600f703.html  dir_11574caf8b65a8850c05c4c81493a96c.html  dir_2ce22d8f58d3d83b707677a128f54e42.html  dir_5957f0ebe5683ae3f9dbf0250c6f1c26.html  dir_7b5cab1452c345bbae4bd651d7eb76a1.html  dir_94e503d5596ca3e5dfe279a56a3d42c7.html  files.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  group__API.html  group__prpc.html  herald_8h.html  herald_8h__incl.map  herald_8h__incl.md5  herald_8h_source.html  index.html  modules.html  prpc_8h.html  prpc_8h__incl.map  prpc_8h__incl.md5  prpc_8h_source.html  publisher_8h.html  publisher_8h__dep__incl.map  publisher_8h__dep__incl.md5  publisher_8h__incl.map  publisher_8h__incl.md5  publisher_8h_source.html  subscriber_8h.html  subscriber_8h__dep__incl.map  subscriber_8h__dep__incl.md5  subscriber_8h__incl.map  subscriber_8h__incl.md5  subscriber_8h_source.html
docs/html/search/: all_2.js  all_3.js  all_5.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js  typedefs_0.js
herald/: CMakeLists.txt
herald/include/herald/: herald.h  publisher.h  subscriber.h
herald/src/: publisher.cpp  shared_mmap.cpp  sharedmem.cpp  sharedmem.h  subscriber.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
